Many site improvements through javascript Fixed switch statement to use break instead of return Added a scoreboard area and corresponding js code to update it

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ button {
 .outputArea {
     background-color: #B1A296;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
